Bug 226011 - Stop bogus warning in nsGREDirServiceProvider::GetFile r=dougt a1.6b=mkaply